[package]
name = "gomander-engiffen"
version = "0.9.0"
authors = ["Jesse Bees <jesse@toomanybees.com>", "Gunnar Omander <gunnar@gomander.dev>"]
description = """
Encodes GIF images from sequences of images. Includes an installable
command line bin as well as the library.
Forked from https://github.com/TooManyBees/engiffen
"""
homepage = "https://github.com/gomander/engiffen"
repository = "https://github.com/gomander/engiffen"
readme = "README.md"
documentation = "https://docs.rs/engiffen"
keywords = ["gif", "stream", "image", "cli"]
categories = ["multimedia", "command-line-utilities"]
license = "MIT"

exclude = [
  "tests/*"
]

[features]
default = ["globbing"]
debug-stderr = []
globbing = ["glob"]

[dependencies]
lab = "~0.11"
image = "~0.24"
gif = "~0.13"
color_quant = "^1"
getopts = "~0.2"
rayon = "^1"
rand = "~0.4"
fnv = "^1"
glob = { version = "~0.3", optional = true }

[lib]
name = "engiffen"
path = "src/lib.rs"

[[bin]]
name = "engiffen"
path = "src/main.rs"
doc = false
